--- a/angular.json
+++ b/angular.json
@@ -8,6 +8,13 @@
       "schematics": {
         "@schematics/angular:application": {
           "strict": true
+        },
+        "@schematics/angular:component": {
+          "flat" : true,
+          "skipTests" : true,
+          "inlineStyle": true,
+          "inlineTemplate": true,
+          "prefix": ""
         }
       },
       "root": "",
@@ -27,6 +34,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -94,6 +102,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
